fix: adjust the adaptive in the section and shift the text in the dropdown menu

--- a/css/about/about.css
+++ b/css/about/about.css
@@ -11,6 +11,7 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    gap: 50px;
 }
 
 .text-container{
@@ -58,11 +59,10 @@
     order: 2;
 }
 
-@media(max-width: 1060px){
+@media(max-width: 1130px){
     .hello-container{
         flex-direction: column;
         align-items: center;
-        gap: 50px
     }
 
     .text-container{
@@ -85,8 +85,7 @@
 @media(max-width: 767px){
     .hello{
         width: 100%;
-        padding: 50px 0;
-        background-color: red;
+        padding: 30px 0;
     }
 
     .hello-container img{
