--- a/css/common/header.css
+++ b/css/common/header.css
@@ -62,6 +62,7 @@ header{
     text-align: left;
     color: var(--active-color-nav-bar);
     cursor: pointer;
+    padding-left: 0;
 }
 
 .dropdown-menu{
